<resources>
    <string name="app_name">Resfeber</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_checklist">Checklist</string>
    <string name="title_profile">Profile</string>
    <string name="important_items">Pack These First</string>
    <string name="sample_checkbox_text">Something I want</string>
    <string name="add_a_group">Add Group</string>
    <string name="other_items">Also Pack</string>
    <string name="title_social">Social</string>
    <string name="sample_dashboard_title">Yajat\'s Trip</string>
    <string name="sample_place">Hyderabad</string>
    <string name="sample_duration">12th to 26th Sep, 2021</string>
    <string name="sample_temp">23°C</string>
    <string name="covid_19_guidelines">COVID-19 Guidelines</string>
    <string name="weather_conditions">Weather Conditions</string>
    <string name="cloudy">Cloudy</string>
    <string name="sample_windspeed">12 km/h</string>
    <string name="sample_rain">50%</string>
    <string name="add_more">Add More</string>
    <string name="logout">Logout</string>
    <string name="sample_email">me@iamyajat.co</string>
    <string name="sample_name">Yajat Malhotra</string>
    <string name="title_documents">Documents</string>
</resources>