<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.yajatmalhotra.travelmate.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_checklist"
        android:name="com.yajatmalhotra.travelmate.ui.checklist.ChecklistFragment"
        android:label="@string/title_checklist"
        tools:layout="@layout/fragment_checklist" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.yajatmalhotra.travelmate.ui.social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.yajatmalhotra.travelmate.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>