<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileData"
            type="com.yajatmalhotra.travelmate.model.ProfileData" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/red_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/red"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingStart="0dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@{profileData.name}"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textColor="@color/red"
                    tools:text="@string/sample_name" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/location"
                    android:paddingBottom="10dp"
                    android:text="@{profileData.email}"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/red"
                    tools:text="@string/sample_email" />

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/duration"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingBottom="5dp"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_logout"
                    app:drawableTint="@color/red" />

            </RelativeLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/hyderabad"
                app:shapeAppearanceOverlay="@style/circleImageView" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>